--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -2,7 +2,7 @@
   {{#each this}}
     <section class="comment">
       <div class="bg-danger">
-        {{User.username}}
+        {{user.username}}
         on
         {{format_date created_at}}
       </div>
