--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -44,4 +44,4 @@
 
 <script src="/js/edit-post.js"></script>
 <script src="/js/delete-post.js"></script>
-{{!-- <script src="/js/comment.js"></script> --}}
+<script src="/js/comment.js"></script>
