--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -20,9 +20,9 @@
             
         </div>
             <div class="text-end">
-                <b>{{user.username}}</b> | 
+                <b>{{User.username}}</b> | 
               
-                <a href="https://github.com/{{user.github}}">{{user.github}}</i></a>
+                <a href="https://github.com/{{User.github}}">{{User.github}}</i></a>
                  | {{format_date created_at}} | <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
             </div>
         
